second attempt test case per 100 chloropleth

--- a/maps_data/Maps Data Viz Testing Notebook.ipynb
+++ b/maps_data/Maps Data Viz Testing Notebook.ipynb
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a74ea6a0",
+   "id": "f9f29128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eea751f",
+   "id": "ba108bac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c365d98",
+   "id": "803d7834",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c2c8ecdf",
+   "id": "83a3a89c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51147114",
+   "id": "6ac8a6f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8140f2ba",
+   "id": "93c3784f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5c45af67",
+   "id": "23443b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "72a6c549",
+   "id": "8dc39b51",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779e3c79",
+   "id": "16efbccf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "326737ea",
+   "id": "5fef3993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "373cf7be",
+   "id": "9a5e2441",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "123a20b1",
+   "id": "76b9d6ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "f3cf33c5",
+   "id": "946def3c",
    "metadata": {},
    "source": [
     "df.head()"
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c0e5007",
+   "id": "dd94f6f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1714a4a3",
+   "id": "b1a9d480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7c4469d4",
+   "id": "132298ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d9c94cf4",
+   "id": "872e083d",
    "metadata": {},
    "outputs": [
     {
@@ -8235,7 +8235,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3d391c35",
+   "id": "d0a87758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8245,7 +8245,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a10ec45c",
+   "id": "68c4d92e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8255,7 +8255,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6811d2a9",
+   "id": "0911ba47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8324,7 +8324,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0ca7f6bd",
+   "id": "b7987f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8335,7 +8335,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5bf8eb7a",
+   "id": "41953dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8345,7 +8345,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2f5da073",
+   "id": "877eca46",
    "metadata": {},
    "outputs": [
     {
@@ -8430,7 +8430,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c63e4e78",
+   "id": "6f60a849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8440,7 +8440,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "66c56335",
+   "id": "e78abd8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8450,7 +8450,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "682a94e7",
+   "id": "2a258dce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8460,7 +8460,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "26d837d9",
+   "id": "8b1212fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8470,7 +8470,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ddebcef1",
+   "id": "3f718de9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8480,7 +8480,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "78078bbc",
+   "id": "1c4f2bdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8490,7 +8490,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "54fb34e3",
+   "id": "fbabfb88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8500,7 +8500,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9f3e7a5b",
+   "id": "471cd8e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8510,7 +8510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b45109",
+   "id": "43c9e674",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8518,7 +8518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d7c335",
+   "id": "2078d634",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8526,7 +8526,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "367d6188",
+   "id": "f0714872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8537,7 +8537,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "596a7125",
+   "id": "5d4219e6",
    "metadata": {},
    "outputs": [
     {
@@ -8625,7 +8625,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5c635896",
+   "id": "9d854922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8635,7 +8635,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f24b7793",
+   "id": "85de6b02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8645,7 +8645,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2d5b5bd9",
+   "id": "2482f9a5",
    "metadata": {},
    "outputs": [
     {
@@ -8742,7 +8742,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d89631b4",
+   "id": "13519db5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8752,7 +8752,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c263074b",
+   "id": "8b5fa87e",
    "metadata": {},
    "outputs": [
     {
@@ -8855,7 +8855,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "216ca0aa",
+   "id": "03d875b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8865,7 +8865,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2bb7ad09",
+   "id": "82b5b2dd",
    "metadata": {},
    "outputs": [
     {
@@ -18980,7 +18980,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "34f938db",
+   "id": "17ffd9e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18990,7 +18990,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4e198788",
+   "id": "8794954d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19000,7 +19000,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f3de2086",
+   "id": "b6816880",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19010,7 +19010,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "326eb9e8",
+   "id": "44337dfb",
    "metadata": {},
    "outputs": [
     {
@@ -19112,18 +19112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "ed080d1a",
+   "execution_count": 55,
+   "id": "b7956c38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_final = filtered[['fips', 'new_case_per']]"
+    "filtered_final = filtered[['state', 'new_case_per']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "bb411573",
+   "execution_count": 56,
+   "id": "6e1b5977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19133,7 +19133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ba93df1",
+   "id": "1adeca47",
    "metadata": {},
    "outputs": [],
    "source": []
