--- a/Data_Exploration/Data_Exp_Testing.ipynb
+++ b/Data_Exploration/Data_Exp_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dae4290c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c5346703",
    "metadata": {},
    "outputs": [
@@ -23,18 +23,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/dev/miniforge3/envs/ml4t/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3169: DtypeWarning: Columns (4,5) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/Users/dev/miniforge3/envs/ml4t/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3169: DtypeWarning: Columns (5,6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
     }
    ],
    "source": [
-    "main = pd.read_csv(\"CMaster_HPS_CDC_CPS_Vaccinated.csv\")"
+    "main = pd.read_csv(\"new_CMaster_HPS_CDC_CPS_NYC_Vaccinated.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d51ac5e0",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>YMFIPS</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>YMFIPS_x</th>\n",
        "      <th>YEAR</th>\n",
        "      <th>MONTH</th>\n",
        "      <th>FIPS</th>\n",
@@ -68,9 +69,7 @@
        "      <th>TBIRTH_YEAR</th>\n",
        "      <th>EEDUC</th>\n",
        "      <th>THHLD_NUMPER</th>\n",
-       "      <th>THHLD_NUMKID</th>\n",
        "      <th>...</th>\n",
-       "      <th>INCOME</th>\n",
        "      <th>CDCCOUNT</th>\n",
        "      <th>REMPCT</th>\n",
        "      <th>people_vaccinated</th>\n",
@@ -80,11 +79,13 @@
        "      <th>ANXIOUS</th>\n",
        "      <th>WORRY</th>\n",
        "      <th>DOWN</th>\n",
+       "      <th>cases_avg_per_100k</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>2021-9-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>SEP</td>\n",
@@ -94,9 +95,7 @@
        "      <td>1941</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4</td>\n",
        "      <td>44878.0</td>\n",
        "      <td>0.032</td>\n",
        "      <td>2583590.0</td>\n",
@@ -106,9 +105,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>2148.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>2021-9-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>SEP</td>\n",
@@ -118,9 +119,7 @@
        "      <td>1973</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>6</td>\n",
        "      <td>44878.0</td>\n",
        "      <td>0.032</td>\n",
        "      <td>2583590.0</td>\n",
@@ -130,9 +129,11 @@
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>2148.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2021-9-13</td>\n",
        "      <td>2021</td>\n",
        "      <td>SEP</td>\n",
@@ -142,9 +143,7 @@
        "      <td>1970</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>58816.0</td>\n",
        "      <td>0.043</td>\n",
        "      <td>5828605.0</td>\n",
@@ -154,9 +153,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>1772.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>2021-9-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>SEP</td>\n",
@@ -166,9 +167,7 @@
        "      <td>1969</td>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
-       "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>-88</td>\n",
        "      <td>44878.0</td>\n",
        "      <td>0.032</td>\n",
        "      <td>2583590.0</td>\n",
@@ -178,9 +177,11 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>2148.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>2021-9-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>SEP</td>\n",
@@ -190,9 +191,7 @@
        "      <td>1977</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>-88</td>\n",
        "      <td>44878.0</td>\n",
        "      <td>0.032</td>\n",
        "      <td>2583590.0</td>\n",
@@ -202,51 +201,87 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
+       "      <td>2148.73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      YMFIPS  YEAR MONTH  FIPS    STATE STATE_CODE  TBIRTH_YEAR  EEDUC  \\\n",
-       "0  2021-9-01  2021   SEP   1.0  Alabama         AL         1941      7   \n",
-       "1  2021-9-01  2021   SEP   1.0  Alabama         AL         1973      4   \n",
-       "2  2021-9-13  2021   SEP  13.0  Georgia         GA         1970      4   \n",
-       "3  2021-9-01  2021   SEP   1.0  Alabama         AL         1969      3   \n",
-       "4  2021-9-01  2021   SEP   1.0  Alabama         AL         1977      4   \n",
+       "   Unnamed: 0   YMFIPS_x  YEAR MONTH  FIPS    STATE STATE_CODE  TBIRTH_YEAR  \\\n",
+       "0           0  2021-9-01  2021   SEP   1.0  Alabama         AL         1941   \n",
+       "1           1  2021-9-01  2021   SEP   1.0  Alabama         AL         1973   \n",
+       "2           2  2021-9-13  2021   SEP  13.0  Georgia         GA         1970   \n",
+       "3           3  2021-9-01  2021   SEP   1.0  Alabama         AL         1969   \n",
+       "4           4  2021-9-01  2021   SEP   1.0  Alabama         AL         1977   \n",
        "\n",
-       "   THHLD_NUMPER  THHLD_NUMKID  ...  INCOME  CDCCOUNT  REMPCT  \\\n",
-       "0             1             0  ...       4   44878.0   0.032   \n",
-       "1             3             0  ...       6   44878.0   0.032   \n",
-       "2             1             0  ...       1   58816.0   0.043   \n",
-       "3             6             2  ...     -88   44878.0   0.032   \n",
-       "4             3             1  ...     -88   44878.0   0.032   \n",
+       "   EEDUC  THHLD_NUMPER  ...  CDCCOUNT  REMPCT  people_vaccinated  \\\n",
+       "0      7             1  ...   44878.0   0.032          2583590.0   \n",
+       "1      4             3  ...   44878.0   0.032          2583590.0   \n",
+       "2      4             1  ...   58816.0   0.043          5828605.0   \n",
+       "3      3             6  ...   44878.0   0.032          2583590.0   \n",
+       "4      4             3  ...   44878.0   0.032          2583590.0   \n",
        "\n",
-       "   people_vaccinated  people_vaccinated_per_hundred  people_fully_vaccinated  \\\n",
-       "0          2583590.0                          52.69                2089852.0   \n",
-       "1          2583590.0                          52.69                2089852.0   \n",
-       "2          5828605.0                          54.90                4823331.0   \n",
-       "3          2583590.0                          52.69                2089852.0   \n",
-       "4          2583590.0                          52.69                2089852.0   \n",
+       "   people_vaccinated_per_hundred  people_fully_vaccinated  \\\n",
+       "0                          52.69                2089852.0   \n",
+       "1                          52.69                2089852.0   \n",
+       "2                          54.90                4823331.0   \n",
+       "3                          52.69                2089852.0   \n",
+       "4                          52.69                2089852.0   \n",
        "\n",
-       "   people_fully_vaccinated_per_hundred  ANXIOUS  WORRY  DOWN  \n",
-       "0                                42.62        1      1     1  \n",
-       "1                                42.62        4      1     1  \n",
-       "2                                45.43        1      1     3  \n",
-       "3                                42.62        3      3     1  \n",
-       "4                                42.62        4      4     4  \n",
+       "   people_fully_vaccinated_per_hundred  ANXIOUS  WORRY  DOWN  \\\n",
+       "0                                42.62        1      1     1   \n",
+       "1                                42.62        4      1     1   \n",
+       "2                                45.43        1      1     3   \n",
+       "3                                42.62        3      3     1   \n",
+       "4                                42.62        4      4     4   \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "   cases_avg_per_100k  \n",
+       "0             2148.73  \n",
+       "1             2148.73  \n",
+       "2             1772.88  \n",
+       "3             2148.73  \n",
+       "4             2148.73  \n",
+       "\n",
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "main.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a33fc381",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'YMFIPS_x', 'YEAR', 'MONTH', 'FIPS', 'STATE',\n",
+       "       'STATE_CODE', 'TBIRTH_YEAR', 'EEDUC', 'THHLD_NUMPER', 'THHLD_NUMKID',\n",
+       "       'THHLD_NUMADLT', 'WRKLOSS', 'KINDWORK', 'MORTLMTH', 'MORTCONF',\n",
+       "       'INCOME', 'CDCCOUNT', 'REMPCT', 'people_vaccinated',\n",
+       "       'people_vaccinated_per_hundred', 'people_fully_vaccinated',\n",
+       "       'people_fully_vaccinated_per_hundred', 'ANXIOUS', 'WORRY', 'DOWN',\n",
+       "       'cases_avg_per_100k'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.columns"
    ]
   },
   {
